--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,4 @@ github_username:  RomainCharmet
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: minima
+theme: jekyll-theme-minima
